# GAnyAndroid

./: CMakeLists.txt  README-zh.md  README.md
examples/AndroidExample/: .gitignore  settings.gradle
examples/AndroidExample/app/: build.gradle  proguard-rules.pro
examples/AndroidExample/app/src/main/: AndroidManifest.xml
examples/AndroidExample/app/src/main/java/com/gx/example/: MainActivity.java
examples/AndroidExample/app/src/main/res/layout/: activity_main.xml
examples/AndroidExample/app/src/main/res/values/: strings.xml  themes.xml
examples/AndroidExample/app/src/main/res/values-night/: themes.xml
examples/AndroidExample/gradle/wrapper/: gradle-wrapper.properties
examples/TestPlugin/: CMakeLists.txt
examples/TestPlugin/include/: reg_plugin.h
examples/TestPlugin/src/: circular.cpp  circular.h  reg_plugin.cpp
src/gany-droid/include/gx/: gany_c_api.h
src/gany-droid/src/: gany_c_api.cpp  gany_jni.cpp  import_modules.cpp
src/java/com/gx/gany/: GAny.java  GAnyIteratorItem.java
